rm overflow hidden in btn tofix bordertop disappear bug

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -20,7 +20,6 @@
     height: @btn-height;
     white-space: nowrap;
     position: relative;
-    overflow: hidden;
     text-overflow:ellipsis;
     font-size: 0.7rem;
     font-family: inherit;
